<resources>
    <string name="Welcome_message">Welcome to FrenzApp</string>
    <string name="register_message">Create a new Account</string>
    <string name="loading_name">Loading Name…</string>
    <string name="api_key">AIzaSyC9K96W_r1RxI6LQ9VrDRxLPZ0ZycAgojw</string>
    <string name="default_notification_channel_id">@string/app_name</string>
    <string name="loading_message">Getting Message..</string>
    <string name="verify_your_mobile">Verify your Mobile</string>
    <string name="title_1">Title</string>
    <string name="text_1">Text</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="profile">My Profile</string>
    <string name="posts">Posts</string>
    <string name="action_remove">Unfriend</string>
    <string name="transition_name">logo_transition</string>
    <string name="extras">Extras</string>
    <string name="package_name">com.nsromapa.frenzapp.newfy</string>
    <string name="version_code">v.beta1</string>
    <string name="title_activity_about_us">About_us</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="web_url">https://frenzapp.nsromapa.com/</string>
    <string name="action_panorama">Show panorama</string>
    <string name="loading_failed">Loading failed. :-(</string>
    <string name="try_again">Try again</string>
    <string name="app_name_world">OurStreets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_bio">Hey there, I am a FrenzApp user.</string>
    <string name="username">\@username</string>
    <string name="dummy_location">Getting location</string>
    <string name="loading_username">\@loading…</string>
    <string name="author_name">Samuel Annin</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="click_on_the_button_below_to_select_image_s">Click on the button below to select image(s)</string>
    <string name="insert_image_s">Insert Image(s)</string>
    <string name="s_people_have_smiled_for_this_post">%d person(s) like this post</string>
    <string name="s_people_have_saved_this_post">%d person(s) has save this post</string>
    <string name="you_have_d_new_friend_request_s">You have %d new friend request(s)</string>
    <string name="new_image_post">New Image Post</string>
    <string name="new_text_post">New Text Post</string>
    <string name="view_profile">View profile</string>
    <string name="sample_title">ChatKit for Android</string>
    <string name="view">View</string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="otp">
        <![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
    <string name="otp1">
        <![CDATA[<font color="#a3a3a3">Enter OTP send to </font> <font color="#000000">+91-9876-564-656</font>]]></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="your_username">Your Username</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_current_city">Your Current City</string>
    <string name="your_current_bio">Your Current Bio</string>
    <string name="update_profile">Update Profile</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="reply_image_with_message">Reply Image With Message</string>
    <string name="reject_an_incoming_call">Reject an incoming call</string>
    <string name="pick_an_incoming_call">Pick an incoming call</string>
    <string name="call_type">call type</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="loading">Loading…</string>
    <string name="smart_reply_settings">Smart Reply settings</string>
    <string name="tap_to_send">Tap to send</string>
    <string name="outgoing_call">Outgoing Call</string>
    <string name="call_ended">Call Ended</string>
    <string name="type_the_channel_name">Type the channel name</string>
    <string name="add_participant">Add Participant</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="media">Media</string>
    <string name="block_this_contact">Block this contact</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="notification">Notification</string>
    <string name="add_channel_or_group_members">Add Channel or Group Members</string>
    <string name="phone_number">Phone Number</string>
    <string name="getting_name">Getting name…</string>
    <string name="getting_username">Getting username…</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_bio">User Bio</string>
    <string name="getting_user_bio">Getting user bio…</string>
    <string name="account_details">Account Details</string>
    <string name="getting_friends_count">Getting friends count…</string>
    <string name="getting_posts_count">Getting posts count…</string>
    <string name="email_">Email</string>
    <string name="enter_question_here">Enter question here</string>
    <string name="subjecct">Subjecct</string>
    <string name="sender">Sender</string>
    <string name="_12_10_pm">12:10 PM</string>
    <string name="caption_is_used_for_image">Caption is used for image</string>
    <string name="image">Image</string>
    <string name="yesterday">Yesterday</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="get_started">Get started</string>
    <string name="app_logo">App Logo</string>
    <string name="type_the_group_name">Type the group name</string>
    <string name="start_screen_text_1">Experience Fast and reliable chat experience</string>
    <string name="wishes_from_fremzapp_team">Wishes from FremzApp team</string>
    <string name="no_friend_found">No friend found</string>
    <string name="add_some_friends_to_send_them_messages">Add some friends to send them messages</string>
    <string name="send_message">Send message</string>
    <string name="share_location">Share location</string>
    <string name="remove_attachment">Remove Attachment</string>
    <string name="message_type">Message Type:</string>
    <string name="text_messages">Text messages</string>
    <string name="text_messages_replies">Text messages replies</string>
    <string name="image_messages">Image messages</string>
    <string name="image_messages_replies">Image messages replies</string>
    <string name="no_messages_found">No messages found</string>
    <string name="messages_sent_to_you_will_be_shown_here">Messages sent to you will be shown here</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_new">Send new</string>
    <string name="reply">Reply</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="change_image">Change Image</string>
    <string name="save_details">Save details</string>
    <string name="remove_image">Remove Image</string>
    <string name="change_password">Change password</string>
    <string name="no_questions_yet">No questions yet</string>
    <string name="all_your_question_appear_here">All your question appear here</string>
    <string name="some_description_about_the_post">Some description about the post</string>
    <string name="preview">Preview</string>
    <string name="your_text_here">Your text here</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
</resources>