<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingBottom="40dp"
    android:layout_height="match_parent"
    tools:context=".saytalk.activities.SplashActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        style="@style/TextViewHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/start_screen_text_1"
        android:textColor="@color/gray_dark"
        android:textSize="22sp"
        android:textStyle="normal" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RoundButton"
        android:background="@drawable/button_round"
        android:text="@string/get_started"
        android:onClick="onGetStartedClick" />

</LinearLayout>