<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/default_user_art_g_2"
                app:civ_border_color="@color/colorPrimaryy"
                app:civ_border_width="0dp" />

            <HorizontalScrollView
                android:id="@+id/tabs"
                android:layout_below="@id/profile_pic"
                android:scrollbars="none"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/options"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_background"
                        android:text="@string/save_details"
                        android:layout_marginEnd="10dp"
                        android:onClick="SelectImage"
                        android:padding="10dp"
                        />

                    <TextView
                        android:id="@+id/picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_background"
                        android:text="@string/change_image"
                        android:padding="10dp"
                        />

                    <TextView
                        android:id="@+id/remove_image"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_background"
                        android:text="@string/remove_image"
                        android:onClick="SelectImage"
                        android:padding="10dp"/>


                    <TextView
                        android:id="@+id/change_password"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_background"
                        android:text="@string/change_password"
                        android:onClick="SelectImage"
                        android:padding="10dp"
                        android:visibility="gone"/>


                </LinearLayout>

            </HorizontalScrollView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                app:cardUseCompatPadding="true"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                android:layout_below="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:text="@string/details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_marginTop="15dp"
                       android:hint="@string/name"
                       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/name"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textPersonName" />

                   </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/h_username"
                        android:layout_marginTop="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/h_email"
                        android:layout_marginTop="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
